syntax = "proto3";

option java_package = "com.example.grpc_healthcare";
option java_outer_classname = "HealthcareProto";

service DashboardService {
  rpc LiveDashboard (stream VitalData) returns (stream DashboardUpdate);
}

message VitalData {
  string patient_id = 1;
  int32 heart_rate = 2;
  int32 blood_pressure_systolic = 3;
  int32 blood_pressure_diastolic = 4;
  int32 oxygen_saturation = 5;
  int64 timestamp = 6;
}

message DashboardUpdate {
  string patient_id = 1;
  string update_message = 2;
  int64 timestamp = 3;
}
